[package]
name = "mcp-poc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "colinrozzi:mcp-poc"

[package.metadata.component.target.dependencies]
"theater:simple" = { path = "./wit/deps/theater-simple" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen-rt = { version = "0.39.0", features = ["bitflags"] }
